CW fixed code smells